[package]
name = "glove_debug"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.13.2", features = ["dynamic_linking"] }
bevy-inspector-egui = "0.24.0"
bevy_gaussian_splatting = "2.1.0"
bevy_hanabi = "0.10.0"
bevy_panorbit_camera = "0.18.2"
btleplug = "0.11.5"
dbus = "0.9.7"
hidapi = "2.6.1"
tokio = "1.37.0"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
